--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
+/* App.css */
+
+/* Style pour le conteneur principal de l'application */
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+/* Style pour le logo */
+.logo {
+  width: 250px;
+  height: 250px;
+  object-fit: contain;
+  margin: auto; /* Ajout de cette ligne pour centrer le logo */
+}
+/* Style pour le titre */
+.content h1 {
+  text-align: center;
+  font-size: 35px;
+  color: #333; /* Vous pouvez ajuster la couleur selon vos préférences */
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Style pour les boutons */
+.button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+/* Style pour l'image dans les boutons */
+.button-image {
+  width: 250px;
+  height: auto;
+  object-fit: contain;
 }
